# Optimized-SC-F-LOAM

./: LICENSE  README.md
optimized-sc-f-loam/: CMakeLists.txt  package.xml
optimized-sc-f-loam-16/: CMakeLists.txt  package.xml
optimized-sc-f-loam-16/include/: laserLoopOptimizationClass.h  laserProcessingClass.h
optimized-sc-f-loam-16/include/scancontext/: Scancontext.h
optimized-sc-f-loam-16/launch/: sc_f_loam_mapping.launch
optimized-sc-f-loam-16/src/: laserLoopOptimizationClass.cpp  laserLoopOptimizationNode.cpp  laserMappingNode.cpp  laserProcessingNode.cpp  lidarOptimization.cpp  odomEstimationClass.cpp  odomEstimationNode.cpp
optimized-sc-f-loam/include/: laserLoopOptimizationClass.h  odomEstimationClass.h
optimized-sc-f-loam/include/scancontext/: KDTreeVectorOfVectorsAdaptor.h  Scancontext.cpp
optimized-sc-f-loam/launch/: optimized_sc_f_loam_mapping.launch  sc_f_loam_mapping.launch  sc_f_loam_mapping_kitti.launch
optimized-sc-f-loam/rviz/: floam_mapping.rviz
optimized-sc-f-loam/src/: laserLoopOptimizationClass.cpp  laserLoopOptimizationNode.cpp  laserMappingClass.cpp  laserMappingNode.cpp  laserProcessingClass.cpp  laserProcessingNode.cpp  lidar.cpp
sc-f-loam8/: CMakeLists.txt  package.xml
sc-f-loam8/include/: lidarOptimization.h
sc-f-loam8/rviz/: sc_f_loam_mapping_kitti.rviz
sc-f-loam8/src/: laserLoopOptimizationClass.cpp  odomEstimationNode.cpp
